--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+
+    <!-- WRAPPER BLOCK --------------------------------------------->
     <div id="wrapper">
         <div id="container">
             <!-- HEADER BLOCK --------------------------------------------->
@@ -25,7 +27,7 @@
                             <a href="" id="welcome">Welcome</a>
                         </li>
                         <li id="layouts">
-                            <a href="" ><i class="fa-solid fa-angle-down"></i> 
+                            <a href=""><i class="fa-solid fa-angle-down"></i>
                                 Layouts
                             </a>
                             <ul id="menu">
@@ -50,16 +52,14 @@
                         </li>
                     </ul>
                 </nav>
-                <div id="burger">
-                    <i class="fa-solid fa-bars"></i>
-                </div>
             </header>
 
             <!-- BANNER BLOCK --------------------------------------------->
             <section id="banner">
                 <div id="bannerContent">
                     <h1>Twenty</h1>
-                    <p>This is <strong>Twenty</strong>, a free <br> responsive template <br> by <a href="">HTML5 UP.</a></p>
+                    <p>This is <strong>Twenty</strong>, a free <br> responsive template <br> by <a href="">HTML5 UP.</a>
+                    </p>
                     <a href="" class="tellMe">Tell me more</a>
                 </div>
             </section>
@@ -199,7 +199,7 @@
                     <a href="" id="lol">lol wut</a>
                 </div>
             </section>
-            
+
             <!-- FOOTER BLOCK --------------------------------------------->
             <footer>
                 <div id="socialIcons">
@@ -223,13 +223,20 @@
             </footer>
         </div>
     </div>
+
+    <!-- BURGER BLOCK --------------------------------------------->
+    <div id="burger">
+        <i class="fa-solid fa-bars"></i>
+    </div>
+
+    <!-- NAV PANEL BLOCK --------------------------------------------->
     <nav id="nav_panel">
         <ul id="panelMainmenu">
             <li>
                 <a href="">Welcome</a>
             </li>
             <li>
-                <a href="" >
+                <a href="">
                     Layouts
                 </a>
                 <ul id="panelMenu">
@@ -254,9 +261,6 @@
             </li>
         </ul>
     </nav>
-
-
-
 
     <script src="./script.js"></script>
 
